fixing view on smaller screens

--- a/style.css
+++ b/style.css
@@ -2412,14 +2412,14 @@ a {
 }
 
 .block-logos {
-  justify-content: space-around;
-  align-items: center;
-  padding: 32px 24px;
-  display: flex;
+  justify-content: center;
+  display: inline-flex;
 }
 
 .logo-wrapper {
-  width: 108px;
+  padding: 18px 12px;
+  justify-content: center;
+  display: inline-flex;
   opacity: .5;
   transition: opacity .25s ease-in-out;
 }
@@ -2429,7 +2429,7 @@ a {
 }
 
 .logo {
-  width: 108px;
+  height: 54px;
 }
 
 .block-header {
@@ -2847,15 +2847,6 @@ ul.exp-points li::marker {
     height: 400px;
   }
 
-  .block-logos {
-    grid-column-gap: 24px;
-    grid-row-gap: 24px;
-    grid-template-rows: auto auto;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-columns: 1fr;
-    display: grid;
-  }
-
   .logo-wrapper {
     justify-content: center;
     align-items: center;
@@ -3003,5 +2994,22 @@ ul.exp-points li::marker {
   100% {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+@media (max-width: 768px) {
+  .block-logos {
+    flex-wrap: wrap;
+  }
+
+  .logo-wrapper {
+    flex: 1 0 50%; /* This makes sure that no more than 2 logos will be on one line */
+    padding: 9px 6px; /* Reduced padding for smaller screens */
+  }
+
+  .logo {
+    height: 54px; /* Maintain aspect ratio */
+    /*max-height: 54px; !* Maximum height for smaller screens *!*/
+    /*max-width: 100%; !* Ensure the image is not larger than its container *!*/
   }
 }
